# Fluorite-Resell-Bot

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
bot/api/: app.py
bot/api/broadcast/: management.py  schemes.py
bot/api/dashboard/: authorization.py  schemes.py
bot/api/games/: management.py  schemes.py
bot/api/keys/: management.py  schemes.py
bot/api/net/: ip.py
bot/api/orders/: management.py  schemes.py
bot/api/uploads/: management.py
bot/api/users/: management.py  schemes.py
bot/commands/: activate_coupon.py  gift_builder.py  help.py
bot/commands/admins/: coupon.py  (+2 more)
bot/core/: container.py  crypto.py  error_handlers.py  exceptions.py  permission.py  security.py
bot/database/: base.py  db.py  init_db.py
bot/enums/: coupons.py  games.py  keys.py  orders.py  telegram_effect.py
bot/generators/: generator.py
bot/handlers/: callback.py  channel.py  coupon_handlers.py  create_coupon.py  gift.py  keyboard.py  referral_system.py  register.py  text.py
bot/localization/: localizer.py
bot/payments/: aaio.py  cryptobot.py  nicepay.py
bot/security/: channel_guard.py  referral_guard.py
bot/services/: init_services.py
bot/state/: admins.py  payments.py  user.py
bot/strategies/: base.py  factory.py  key_coupon.py  money_coupon.py
bot/utils/: converters.py  generator.py  logger.py  maps.py  short.py  timezone.py
bot/views/: error_message.py  game_message.py  profile.py  welcome_sender.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css
(+58 files in other folders)
