[project]
name = "fluoritehub"
version = "1.0.0"
description = ""
authors = [
    {name = "Smofe1337",email = "smofe9888@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.21.0,<4.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "aiohttp (>=3.12.14,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "datetime (>=5.5,<6.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "async-lru (>=2.0.5,<3.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "cryptography (>=45.0.5,<46.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-jose (>=3.5.0,<4.0.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "pytest-mock (>=3.14.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false